@@ -1,5 +1,6 @@
 Changelog for mk-table-checksum and mk-checksum-filter:
 
+   * Added --singlechunk and --savesince (issue 53).
    * --replicate with large WHERE did not fit in boundaries column (issue 81).
 
 2008-09-19: version 1.1.29
